# open-align

./: .gitignore  README.md  pyproject.toml
src/open_align/: cli.py  core.py  gui.py
src/open_align/ui/: __init__.py  image_list.py  main_window.py
src/open_align/ui/tabs/: cropping_tab.py  images_selector_tab.py
tests/: test_core.py
